5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1723_2503.log
== TEST (2019-05-14 11:26:55) 
-- CODE:
n= int(input("qual seu termo geral?"))
pi=0
i=0

while(t<n):
	pi=pi + (4/2*i+1)*(-1)**i
	i=i+1
print(round(pi,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(t<n):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:02) 
-- CODE:
n= int(input("qual seu termo geral?"))
pi=0
i=0

while(i<n):
	pi=pi + (4/2*i+1)*(-1)**i
	i=i+1
print(round(pi,8))
	
-- OUTPUT:
-136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:54) 
-- CODE:
n= int(input("qual seu termo geral?"))
pi=0
i=0

while(i<n):
	pi=pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi,8))
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:27:58) 
-- CODE:
n= int(input("qual seu termo geral?"))
pi=0
i=0

while(i<n):
	pi=pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi,8))
	
-- EXECUTION TIME:
0.13108
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
